# classroom

./: .gitignore  .python-version  LICENSE  README.md  README_A1.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  mlflow.Dockerfile
.devcontainer/python/: docker-compose.yml  dockerfile
models/: a1_predict_car_price.model
notebook/: A1 - Predicting Car Prices.ipynb  cars_a1.html
notebooks/: 03 - Regularization.ipynb  A1 - Predicting Car Prices.ipynb  cars_a1.ipynb
output/: A1 - Predicting Car Prices.html
src/classroom/: __init__.py
src/classroom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
