[project]
name = "classroom"
version = "0.1.0"
description = "Classroom"
readme = "README.md"
authors = [
    { name = "Sushmi S", email = "sushmi" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
classroom = "classroom:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
