[project]
name = "classroom"
version = "0.1.0"
description = "Classroom"
readme = "README.md"
authors = [
    { name = "Sushmi Shrestha", email = "st126256@ait.asia" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.3.2",
    "numpy>=2.2.6",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.1",
    "pandas>=2.3.2",
    "ppscore>=1.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.11",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "shap>=0.48.0",
    "skl2onnx>=1.19.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.scripts]
classroom = "classroom:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
